# BUT_Telepresence

./: .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  README.adoc  boost_build.sh  build.gradle  main.cpp
include/: check.h  common.h  geometry.h  gpu_window.h  gstreamer_android.h  gstreamer_player.h  json.h  log.h  ntp_timer.h  pch.h  platform_plugin.h  pose_server.h  program.h  render_imgui.h  render_scene.h  render_texplate.h  rest_client.h  robot_control_sender.h  ros_network_gateway_client.h  servo_communicator.h  state_storage.h  util_egl.h  util_openxr.h  util_render_target.h  util_shader.h
src/: check.h  common.h  geometry.h  gpu_window.cpp  graphics_plugin.h  graphics_plugin_opengles.cpp  graphics_plugin_vulkan.cpp  gstreamer_android.c  gstreamer_player.cpp  gstreamer_player.h  linear.h  log.h  main.cpp  ntp_timer.cpp  options.h  pch.h  platform_data.h  platform_plugin.h  platform_plugin_android.cpp  pose_server.cpp  program.cpp  program.h  render_imgui.cpp  render_scene.cpp  render_texplate.cpp  rest_client.cpp  robot_control_sender.cpp  ros_network_gateway_client.cpp  servo_communicator.cpp  servo_communicator.h  state_storage.cpp  udp_socket.cpp  udp_socket.h  util_egl.cpp  util_openxr.cpp  util_render_target.cpp  util_shader.cpp  vulkan_debug_object_namer.h  xr_linear.h
src/shaders/: frag.glsl  shaders.h  vert.glsl
src/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameInfo.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderSystem.cpp  VulkanRenderSystem.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h
